syntax = "proto3";
package raft;

enum LogEntryType {
    LogCommand = 0;
    LogConfCommand = 1;
    LogNoOp = 2;
}

message LogEntry {
    uint64 index = 1;
    uint64 term = 2;
    LogEntryType log_entry_type = 3;
    bytes data = 4;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    uint64 commit_index = 6;
}

message TimeoutNowRequest {
    string leader_id = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidate_id = 2; 
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
    uint64 commit_index = 5;
    bool disrupt_leader = 6;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message TimeoutNowResponse {
    uint64 term = 1;
    bool success = 2;
}

service RaftGrpcTransport {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc TimeoutNow(TimeoutNowRequest) returns (TimeoutNowResponse);
}